--- a/SEO/notebooks/roi.ipynb
+++ b/SEO/notebooks/roi.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "fc708439",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "11      7515.18  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,12 +652,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "8623e442",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '../output/seo_performance.csv'\n",
+    "file_path = '../data/seo_performance.csv'\n",
     "df.to_csv(file_path, index=False)"
    ]
   },
@@ -1012,32 +1012,6 @@
     "# Improve layout and display the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be468bff",
-   "metadata": {},
-   "source": [
-    "## 🧠 Insights\n",
-    "\n",
-    "- Which month had the highest ROAS?\n",
-    "- Did high ad spend always lead to more conversions?\n",
-    "- Where could the business cut costs without hurting revenue?\n",
-    "\n",
-    "These insights help prioritize marketing strategy and optimize budget allocation.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## ✅ Next Steps\n",
-    "\n",
-    "This analysis could easily be expanded to include:\n",
-    "\n",
-    "- Multi-channel comparison (SEO vs Social vs Paid Ads)\n",
-    "- Landing page performance\n",
-    "- A/B testing outcomes\n",
-    "\n",
-    "You’re now ready to show off your analytical skills for SEO or Marketing Analyst roles!"
    ]
   }
  ],
